Fixes the bug: on the image preview page, the image does not fit the window height

--- a/src/app/ws_requests/ws-requests-msgs/image-viewer/image-viewer.component.scss
+++ b/src/app/ws_requests/ws-requests-msgs/image-viewer/image-viewer.component.scss
@@ -1,107 +1,92 @@
 // --- MODAL PREVIEW IMAGE
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1050; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-  }
-  
-  /* Modal Content (Image) */
-  .modal-content {
-    margin: auto;
-    display: block;
-    // width: 80%;
-    // max-width: 700px;
-    padding: 0px 5px;
-  }
-  
-  /* Caption of Modal Image (Image Text) - Same Width as the Image */
-  #caption {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-    text-align: center;
-    color: #ccc;
-    padding: 10px 0;
-    height: 150px;
-  }
-  
-  /* Add Animation - Zoom in the Modal */
-  .modal-content, #caption {
-    animation-name: zoom;
-    // animation-duration: 0.6s;
-  }
-  
-  @keyframes zoom {
-    from {transform:scale(0)}
-    to {transform:scale(1)}
-  }
-  
+.image-viewer-modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1050; /* Sit on top */
+  // padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+}
+
+.image-viewer-modal-header {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row-reverse;
+  margin: 20px;
+
   /* The Close Button */
-  .close-modal-image-viewer {
-    position: absolute;
-    top: 15px;
-    right: 35px;
-    // color: #f1f1f1;
-    // font-size: 40px;
-    // font-weight: bold;
+  .button {
     transition: 0.3s;
     border-radius: 50px;
-    padding:7px 8.5px
+    padding: 7px 8.5px;
   }
 
-  .close-modal-image-viewer svg {
+  svg {
     background-color: transparent;
-    fill: rgba(255,255,255,.5);
+    fill: rgba(255, 255, 255, 0.5);
   }
 
-  .close-modal-image-viewer:hover,
-  .close-modal-image-viewer:focus {
+  .button:hover,
+  .button:focus {
     // color: #bbb;
-    background-color: rgba(255,255,255,.3);
+    background-color: rgba(255, 255, 255, 0.3);
     text-decoration: none;
     cursor: pointer;
     svg {
-        fill: rgba(255,255,255, 1);
+      fill: rgba(255, 255, 255, 1);
     }
   }
+}
+/* Modal Content (Image) */
+.image-viewer-modal-content {
+  margin: auto;
+  display: block;
+  padding: 0px 5px;
+  height: 82%;
 
-  .download-image {
-    position: absolute;
-    top: 15px;
-    right: 78px;
-    transition: 0.3s;
-    border-radius: 50px;
-    padding:7px 8.5px
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: scale-down;
   }
+}
 
-  .download-image svg {
-    background-color: transparent;
-    fill: rgba(255,255,255,.5);
-  }
+/* Caption of Modal Image (Image Text) - Same Width as the Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  // height: 150px;
+}
 
-  .download-image:hover,
-  .download-image:focus {
-   
-    background-color: rgba(255,255,255,.3);
-    text-decoration: none;
-    cursor: pointer;
-    svg {
-        fill: rgba(255,255,255, 1);
-    }
+/* Add Animation - Zoom in the Modal */
+.image-viewer-modal-content,
+#caption {
+  animation-name: zoom;
+  // animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {
+    transform: scale(0);
   }
-  
-  /* 100% Image Width on Smaller Screens */
-  @media only screen and (max-width: 700px){
-    .modal-content {
-    //   width: 100%;
-    }
+  to {
+    transform: scale(1);
   }
+}
+
+// /* 100% Image Width on Smaller Screens */
+// @media only screen and (max-width: 700px){
+//   .modal-content {
+//   //   width: 100%;
+//   }
+// }
